# RayTracingRenderer

./: BVH.h  Bound3.h  CMakeLists.txt  Global.h  Intersection.h  Material.h  Object.h  README.md  Ray.h  Render.h  Scene.h  Sphere.h  Trangle.h  Vector.h  main.cpp
include/: BVH.h  Bound3.h  Global.h  Intersection.h  Material.h  Matrix.h  Object.h  Photon.h  Ray.h  Render.h  Scene.h  Sphere.h  Trangle.h  Vector.h
src/: BVH.cpp  Bound3.cpp  Material.cpp  Render.cpp  Scene.cpp  Sphere.cpp  Trangle.cpp  main.cpp
